[tool.poetry]
name = "autostrava"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest-playwright = "^0.6.2"
playwright = "^1.49.0"
playwright-stealth = "^2.0.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.8.2"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.select = [
    "A",
    "B",
    "E",
    "F",
    "I",
    "N",
    "UP",
    "W",
]
lint.ignore = [
    "E501",
    "W191",
]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true